plugins {
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.shyam'
version = '0.0.1-SNAPSHOT'

java {
    withJavadocJar()
    withSourcesJar()

    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // ========================================
    // 🌐 WEB
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-web'


    // ========================================
    // 🗄️ JPA / HIBERNATE
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


    // ========================================
    // 🛫 DATABASE MIGRATION - FLYWAY
    // ========================================
    implementation 'org.flywaydb:flyway-core'


    // ========================================
    // 🔐 SECURITY
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-security'


    // ========================================
    // 🔑 OAUTH2
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    // ========================================
    // ✉️ MAIL
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-mail'


    // ========================================
    // 🧾 JWT
    // ========================================
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'


    // ========================================
    // 📄 PDF
    // ========================================
    implementation 'com.itextpdf:itextpdf:5.5.13.3'


    // ========================================
    // 📊 EXCEL
    // ========================================
    implementation 'org.apache.poi:poi-ooxml:5.2.5'


    // ========================================
    // 📘 SWAGGER / OPENAPI
    // ========================================
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'


    // ========================================
    // 📧 THYMELEAF
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


    // ========================================
    // 🐘 POSTGRESQL
    // ========================================
    implementation 'org.postgresql:postgresql'


    // ========================================
    // ☁️ CLOUDINARY
    // ========================================
    implementation 'com.cloudinary:cloudinary-http44:1.32.0'


    // ========================================
    // ✅ VALIDATION
    // ========================================
    implementation 'org.hibernate.validator:hibernate-validator'


    // ========================================
    // 🧰 LOMBOK
    // ========================================
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    // ========================================
    // 🧪 TESTING
    // ========================================
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'


    // ========================================
    // 🧪 H2
    // ========================================
    runtimeOnly 'com.h2database:h2'


    // ========================================
    // 📈 MICROMETER / PROMETHEUS
    // ========================================
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.micrometer:micrometer-registry-prometheus'


    // ========================================
    // 📝 JSON LOGGING
    // ========================================
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'


    // ========================================
    // ❤️ ACTUATOR
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}


// ========================================
// 🧪 TEST CONFIGURATION
// ========================================
tasks.named('test') {
    useJUnitPlatform()
}


// ========================================
// ✨ SPOTLESS
// ========================================
spotless {
    java {
        googleJavaFormat('1.18.0')
        removeUnusedImports()
    }
}

